# bg-remover

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  requirements-hf.txt
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  downloads.py  images.py  jobs.py  payments.py  watermark.py
backend/app/db/: database.py
backend/app/middleware/: api_key_auth.py  rate_limit.py
backend/app/models/: api_key.py  schemas.py
backend/app/services/: api_key_service.py  image_processor.py  job_manager.py  watermark_remover.py
backend/app/services/storage/: __init__.py  base.py  local.py  r2.py
backend/app/tasks/: queue.py  worker.py
backend/app/utils/: cleanup.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py  test_auth_flow.py
backend/tests/stress/: locustfile.py
backend/tests/unit/: test_api_keys.py  test_job_manager.py  test_payments.py  test_queue.py  test_r2_storage.py  test_rate_limit.py  test_storage.py  test_validators.py
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useBackgroundRemoval.ts  useCanvasCustomization.ts  useCanvasDrag.ts  useCanvasEditor.ts  useImageUpload.ts  useJobStatus.ts  useRetouchBrush.ts  useWatermarkRemoval.ts
frontend/src/lib/: api.ts  appIcons.ts  canvasCompositor.ts  fonts.ts  (+4 more)
scripts/: download-models.sh
(+52 files in other folders)
